truly outcomment the lines below this ```     // These options search the repo recursively and slow down     // the build task menu. We define our own in tasks.json. ```

--- a/.vscode/settings.template.json
+++ b/.vscode/settings.template.json
@@ -23,9 +23,9 @@
 
     // These options search the repo recursively and slow down
     // the build task menu. We define our own in tasks.json.
-    "typescript.tsc.autoDetect": "off",
-    "npm.autoDetect": "off",
-    "grunt.autoDetect": "off",
-    "jake.autoDetect": "off",
-    "gulp.autoDetect": "off"
+    // "typescript.tsc.autoDetect": "off",
+    // "npm.autoDetect": "off",
+    // "grunt.autoDetect": "off",
+    // "jake.autoDetect": "off",
+    // "gulp.autoDetect": "off"
 }
